<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_margin="10dp">
            <ImageView
                android:background="@drawable/dune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:text="@string/duneT"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/duneDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_margin="10dp">
            <ImageView
                android:background="@drawable/alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:text="@string/alertaRojaT"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/alertaRojaDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_margin="10dp">
            <ImageView
                android:background="@drawable/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:text="@string/freeGuyT"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/freeGuyDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_margin="10dp">
            <ImageView
                android:background="@drawable/escuadron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:text="@string/escuadronSuicidaT"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/escuadronSuicidaDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </TableRow>
    </TableLayout>
</ScrollView>